# War-Times_V0.01

./: CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
levels/: test_arena.wtlevel
models/Character/: Walking.fbx
models/Gun/: AssaultRifle1.mesh  Pistol1.mesh
models/Prefabs/: Columns.003.mesh  Columns.010.mesh  Columns.012.mesh  Cube.048.mesh  Cube.053.mesh  Cube.054.mesh  Cube.056.mesh  Cube.057.mesh  Cube.060.mesh  Cube.062.mesh  Cube.066.mesh  Cube.067.mesh  Cube.068.mesh  Cylinder.010.mesh  Fence.006.mesh  Fence.008.mesh  Fence.009.mesh  Fence.011.mesh  Fence.012.mesh  Fence.014.mesh  Fence.015.mesh  Fence.017.mesh  Fence.018.mesh  Fence.025.mesh  Fence.026.mesh  Fence.030.mesh  Fence_edge.003.mesh  Pillar.005.mesh  Pillar.006.mesh  Pillar.034.mesh  Pillar.035.mesh  Pillar.042.mesh  Wall.111.mesh  Wall.112.mesh  Wall.125.mesh  Wall.126.mesh  Wall.129.mesh  Wall.132.mesh  Wall.137.mesh  Wall.138.mesh  (+22 more)
shaders/: DebugPS.hlsl  FSRPS.hlsl  GroundVS.hlsl  SkyVS.hlsl  VoxelPS.hlsl  VoxelVS.hlsl
src/: main.cpp
src/AI/: AIAgent.cpp  AIAgent.h  NavGrid.cpp  NavGrid.h
src/Core/: AnimStateMachine.cpp  AnimStateMachine.h  Application.cpp  Application.h  Character.cpp  Character.h  Entity.h  Input.cpp  Input.h  ResourceManager.cpp  ResourceManager.h  SceneCulling.h  TimeWeatherSystem.cpp  TimeWeatherSystem.h  Timer.cpp  Timer.h
src/Editor/: EditorPanels.cpp  EditorPanels.h  EditorUI.cpp  EditorUI.h  LevelEditorWindow.cpp  LevelEditorWindow.h  LevelFile.h
src/FX/: ParticleSystem.h
src/Gameplay/: FPSArmsAnimator.cpp  FPSArmsAnimator.h  HUD.cpp  HUD.h  WeaponSystem.cpp  WeaponSystem.h
src/Graphics/: Camera.cpp  Camera.h  ConstantBuffer.h  DebugRenderer.cpp  DebugRenderer.h  FBXModel.cpp  FBXModel.h  FSRUpscaler.cpp  FSRUpscaler.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  OBJLoader.cpp  OBJLoader.h  PostProcess.cpp  PostProcess.h  Renderer.cpp  Renderer.h  SSAO.cpp  SSAO.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  SkinnedMesh.cpp  SkinnedMesh.h  Texture.cpp  Texture.h
src/PCG/: LevelGenerator.h  WarfieldGenerator.h
src/Physics/: PhysicsWorld.cpp  PhysicsWorld.h
src/Util/: Log.h  MathHelpers.h
tools/: blender_mesh_exporter.py  debug_matrices.py  export_skinned_mesh.py  fbx2obj.py  gen_textures.py  inspect_fbx.py  inspect_trimesh.py  process_models.py
